Closed
Bug 258410
Opened 21 years ago
Closed 20 years ago
fix dynamic matrix transforms
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: alex, Assigned: alex)
Details
(Keywords: fixed1.8)
Attachments
(1 file, 1 obsolete file)
|
6.29 KB,
patch
|
tor
:
approval1.8b3+
asa
:
approval1.8b5+
|
Details | Diff | Splinter Review |
Dynamic updates of transforms in code like the following are currently not
working. Upcoming patch fixes that.
<svg>
<circle transform="matrix(1 0 0 1 0 0)"/>
</svg>
circle_element.transform.baseVal.getItem(0).matrix.a = 10;
Expected Result: new transform matrix [10 0 0 1 0 0] should be applied to circle.
Actual Result: matrix gets the new value, but circle is not redrawn with new
transform.
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #158181 -
Flags: review?(tor)
Comment 2•21 years ago
|
||
r=+ from me. Not sure how to add that to the patch without removing the request
for review from tor.
Comment 3•21 years ago
|
||
Comment on attachment 158181 [details] [diff] [review]
fix
r=jonathan.watt@strath.ac.uk
As discussed with tor
Attachment #158181 -
Flags: review?(tor) → review+
Comment 4•21 years ago
|
||
Alex, can you check in your patch so we can close this bug please?
Comment 5•20 years ago
|
||
Updated Alex's patch to tip. Alex, do you mind if I check this in for you?
Attachment #158181 -
Attachment is obsolete: true
Attachment #187549 -
Flags: approval1.8b3?
Attachment #187549 -
Flags: approval1.8b3? → approval1.8b3+
Comment 6•20 years ago
|
||
Uhm, was the patch checked in? What's the status of this bug?
Comment 7•20 years ago
|
||
Comment on attachment 187549 [details] [diff] [review]
fix updated to tip
Requesting approval for branch. Alex says he doesn't mind if one of us checks
this in for him. This is SVG only and low risk IMO. It fixes a conformance
issue, so I think it's important we include this for Firefox 1.5.
Attachment #187549 -
Flags: approval1.8b5?
Updated•20 years ago
|
Attachment #187549 -
Flags: approval1.8b5? → approval1.8b5+
Comment 8•20 years ago
|
||
checked in on trunk and branch
You need to log in
before you can comment on or make changes to this bug.
Description
•