Fixing bug 258410. Fix dynamic matrix transforms. Patched by alex@croczilla.com, r=me